2005-07-26  Jim Huang  <jserv@kaffe.org>

	* configure.ac:
	Enhance Python development headers detection.
	Rename PYTHON_{CFLAGS,LIBS} to SCRIPT_{CFLAGS,LIBS}.

	* src/Makefile.am: Likewise.

2005-07-26  Kanru Chen  <koster@debian.org.tw>
	
	* configure.ac:
	Add python version and header files auto-detect.

2005-07-26  Jim Huang  <jserv@kaffe.org>

	* src/view/telnetcon.cpp,
	src/Makefile.am,
	plugin/src/Makefile.am,
	configure.ac:
	Define a new autoconf test, AC_CSRG_BASED, which will define
	CSRG_BASED for BSD systems in config.h.

	* configure.ac,
	README:
	Add new option --with-mozilla=DIR to specify Mozilla root
	directory.

2005-07-26  Kanru Chen  <koster@debian.org.tw>

	* src/script/api.h,
	src/script/script.cpp,
	src/view/telnetcon.cpp,
	src/mainframe.cpp,
	src/pcmanx_pure_gtk2.cpp,
	src/Makefile.am,
	data/orz.py,
	data/PCManXlib.py,
	data/Makefile.am,
	configure.ac:
	Initial Python script support. Example please refer to orz.py.

2005-07-26  Chia I Wu  <b90201047@ntu.edu.tw>

	* src/core/font.cpp: Use FC_PIXEL_SIZE when opening font by pixel
	height.
	Use XftFontOpenPattern so that we don't have to match the pattern
	every time.
	s/XFT_/FC_/ and s/XftType/FcType/ where suitable.

2005-07-26  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/view/telnetview.cpp:
	Temporarily enable the popup menu of hyperlinks.

	* plugin/src/plugin.cpp:
	Add timers to enable cursor blinking and anti-idle.

2005-07-26  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/sitepage.cpp:
	Adjust the user interface and add a checkbox for double-byte detection.

	* src/appconfig.cpp:
	Check default cols and rows of terminal screen and set them to proper 
	value if needed.  These values cannot be zero or they will cause the 
	arithmetic error - "divided by zero".

2005-07-25  Jim Huang  <jserv@kaffe.org>

	* plugin/src/nsScriptablePeer.cpp (nsScriptablePeer::QueryOnExit):
	Implemented.

	* plugin/src/Makefile.am: Put $(LDFLAGS) with pcmanx-plugin.so
	generation.
